@@ -252,6 +252,8 @@
  - (djm) [md-sha256.c configure.ac] md-sha256.c needs sha2.h if present
  - (djm) [regress/.cvsignore] Ignore Makefile here
  - (djm) [loginrec.c] Need stat.h
+ - (djm) [openbsd-compat/sha2.h] Avoid include macro clash with
+   system sha2.h
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
@@ -4153,4 +4155,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4213 2006/03/15 03:01:11 djm Exp $
+$Id: ChangeLog,v 1.4214 2006/03/15 03:02:01 djm Exp $
